--- a/Exercises/html-css-git-exercises/week-1/6-css-properties/styles.css
+++ b/Exercises/html-css-git-exercises/week-1/6-css-properties/styles.css
@@ -1,19 +1,19 @@
 /* Add your CSS code below */
 a {
-    color: red;
-    text-decoration: none;
-    font-weight: bold;
+  color: red;
+  text-decoration: none;
+  font-weight: bold;
 }
 
 p {
-  font-size: 0.9rem;  
+  font-size: 0.9rem;
 }
 .message--unread {
-    border-left: blue 1px solid;
+  border-left: blue 1px solid;
 }
 .message {
-    line-height: 2;
+  line-height: 2;
 }
-.messages:first-child {
-    opacity: 50%;
+.messages div:first-child {
+  opacity: 50%;
 }
