--- a/Exercises/html-css-git-exercises/week-1/8-advanced-selectors/styles.css
+++ b/Exercises/html-css-git-exercises/week-1/8-advanced-selectors/styles.css
@@ -1,12 +1,12 @@
 /* Try different box model properties below */
 .site-header > p {
-    color: white;
-    margin-bottom: -10px;
+  color: white;
+  margin-bottom: 0px;
 }
 .site-footer p {
-    font-size: 12px;
-    text-align: center;
+  font-size: 12px;
+  text-align: center;
 }
-.messages:last-child{
-    box-shadow: 4px 4px 0 #dba944 ;
+.messages div:last-child {
+  box-shadow: 4px 4px 0 #dba944;
 }
