--- a/Exercises/html-css-git-exercises/week-2/12-justify-content/flexbox.css
+++ b/Exercises/html-css-git-exercises/week-2/12-justify-content/flexbox.css
@@ -1,3 +1,6 @@
+* {
+  flex: none;
+}
 .countries {
   display: flex;
 }
@@ -8,7 +11,6 @@
 .countries--first {
   justify-content: right;
 }
-
 .countries--second {
   justify-content: space-between;
 }
