--- a/Challenge/HTML/BayanSwaid CSS 2.css
+++ b/Challenge/HTML/BayanSwaid CSS 2.css
@@ -22,7 +22,7 @@ footer {
     text-align: center;
     font-size: 12px;
 }
-.menu {
+/*.menu {
         list-style-type: none;
         margin: 0;
         padding: 0;
@@ -37,4 +37,9 @@ footer {
     padding: 8px;
     text-decoration: none;
     background-color: #dddddd;
+  }
+*/
+
+nav {
+    display: block;
   }
