Completed HTML challenge

--- a/Challenge/HTML/BayanSwaid CSS 3.css
+++ b/Challenge/HTML/BayanSwaid CSS 3.css
@@ -102,11 +102,9 @@ body {
 #footer {
     clear: both;
     height: 200px;
-    width: 900px;
+    width: 100%;
     text-align: center;
     margin: 0px 0px 0px 0px;
-    font-family: arial, helvetica;
-    font-weight: bold ;
     font-size: 11px;
     }
 /*
