--- a/Exercises/html-css-git-exercises/week-2/12-justify-content/flexbox.css
+++ b/Exercises/html-css-git-exercises/week-2/12-justify-content/flexbox.css
@@ -20,6 +20,7 @@
   padding-top: 200px;
 }
 .countries--fourth {
-  justify-content: space-between;
   flex-direction: column-reverse;
+  justify-content: space-between;
+  height: 50px;
 }
