--- a/Exercises/html-css-git-exercises/week-2/13-align-items/flexbox.css
+++ b/Exercises/html-css-git-exercises/week-2/13-align-items/flexbox.css
@@ -3,6 +3,17 @@
 }
 /* Add your own CSS code below */
 .countries--first {
-  align-items: right;
-  flex-direction: row;
+  align-items: center;
+}
+.countries--second {
+  align-items: flex-end;
+  flex-direction: row-reverse;
+}
+.countries--third {
+  align-items: flex-end;
+  flex-direction: column;
+}
+.countries--fourth {
+  align-items: center;
+  flex-direction: column-reverse;
 }
