--- a/Exercises/weather-api/src/App.css
+++ b/Exercises/weather-api/src/App.css
@@ -1,11 +1,13 @@
 .app {
-  height: 100vh;
-  width: 100vw;
   transition: background-color 1s ease-in;
 }
 
-.app__header,
-.app__main {
+body {
+  background-color: #9cc2f7;
+}
+
+.appheader,
+.appmain {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -17,5 +19,104 @@
 }
 
 /*  Search bar */
+* {
+  font-family: "Raleway", sans-serif;
+}
+
+nav {
+  background-color: #7b88dc;
+  padding: 17px 0;
+}
+
+.city {
+  background-color: #7b88dc;
+  border: none;
+  color: #fff;
+  margin-left: 15px;
+  font-size: 17px;
+}
+
+.btn-search {
+  background-color: #6455c9;
+  color: black;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+}
 
 /* Current weather */
+.img {
+  height: 200px;
+  width: 200px;
+}
+
+.container {
+  background-color: #9cc2f7;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.today-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.today-txt {
+  color: #fff;
+  font-weight: bold;
+  margin-left: -38px;
+}
+
+.mt-25 {
+  margin-top: 25px;
+  color: rgb(51, 6, 94);
+}
+
+.mt-26 {
+  margin-top: 25px;
+  margin-right: -35px;
+  color: rgb(51, 6, 94);
+  font-size: 12px;
+}
+
+.bold {
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+.bold2 {
+  font-weight: bold;
+  margin-right: 15px;
+  margin-left: 15px;
+}
+
+.hourly-title {
+  color: #fff;
+  margin-top: 15px;
+  font-weight: bold;
+}
+
+.hours-weather {
+  /* margin-top: 30px;*/
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon {
+  margin: 20px 0;
+  width: 60px;
+  height: 60px;
+}
+
+.row {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  height: 40%;
+}
